--- a/src/app/core/modules/home/components/products/products.component.scss
+++ b/src/app/core/modules/home/components/products/products.component.scss
@@ -1,3 +1,34 @@
 ul{
   list-style: none;
+  padding: 0;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 20px;
+  & li{
+    
+    border-radius: 10px;
+    padding: 5px;
+    &:hover{
+      background-color: green;
+    }
+  }
+  .prod-img{
+    object-fit: cover;
+    object-position: center;
+  }
+  .prod-link{
+    text-decoration: none;
+    color: white;
+    font-size: 0.8em;
+    text-align: center;
+    &:hover{
+      cursor: pointer;
+      color: rgb(2, 2, 94);
+    }
+  }
+}
+.likes-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
