like/dislike missing cart

--- a/src/app/core/modules/home/components/products/products.component.scss
+++ b/src/app/core/modules/home/components/products/products.component.scss
@@ -2,7 +2,7 @@ ul{
   list-style: none;
   padding: 0;
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: 23% 23% 23% 23%;
   gap: 20px;
   & li{
     
