--- a/src/app/core/modules/home/components/products/products.component.html
+++ b/src/app/core/modules/home/components/products/products.component.html
@@ -24,9 +24,23 @@
         <span>{{ product.published_at | date }}</span>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button><mat-icon>thumb_up</mat-icon></button>
+        <button
+          mat-button
+          #like
+          [value]="product.id"
+          (click)="likeAndNotBtn(like.value, up)"
+        >
+          <mat-icon>thumb_up</mat-icon>
+        </button>
         <span>{{ product.likes_up_count }}</span>
-        <button mat-button><mat-icon>thumb_down</mat-icon></button>
+        <button
+          mat-button
+          #dislike
+          [value]="product.id"
+          (click)="likeAndNotBtn(dislike.value, down)"
+        >
+          <mat-icon>thumb_down</mat-icon>
+        </button>
         <span>{{ product.likes_down_count }}</span>
       </mat-card-actions>
       <span>
