--- a/src/app/core/modules/home/components/categories/categories.component.html
+++ b/src/app/core/modules/home/components/categories/categories.component.html
@@ -1,6 +1,6 @@
 <h3>Categories</h3>
 <ul>
   <li *ngFor="let cat of categories | async">
-    <div>{{ cat.name }}</div>
+    <div>-{{ cat.name }}</div>
   </li>
 </ul>
