--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -22,7 +22,11 @@
       </button>
     </div>
     <div *ngIf="isLoggedIn()">
-      <button mat-icon-button aria-label="icon-button with heart icon">
+      <button
+        routerLink="/cart"
+        mat-icon-button
+        aria-label="icon-button with heart icon"
+      >
         <mat-icon>shopping_cart</mat-icon>
       </button>
     </div>
