--- a/src/app/core/modules/home/components/categories/categories.component.scss
+++ b/src/app/core/modules/home/components/categories/categories.component.scss
@@ -5,4 +5,11 @@ ul{
   & li{
     margin-top: 5px;
   }
+  a{
+    text-decoration: none;
+    color: white;
+    &:hover{
+      color: rgb(1, 1, 125);
+    }
+  }
 }
