--- a/src/app/core/modules/home/components/products/products.component.scss
+++ b/src/app/core/modules/home/components/products/products.component.scss
@@ -1,10 +1,10 @@
-ul{
+.container{
   list-style: none;
   padding: 0;
   display: grid;
   grid-template-columns: 23% 23% 23% 23%;
   gap: 20px;
-  & li{
+  & .product{
     
     border-radius: 10px;
     padding: 5px;
