--- a/src/app/shared/components/nav/nav.component.html
+++ b/src/app/shared/components/nav/nav.component.html
@@ -45,7 +45,7 @@
       </button>
     </div>
     <mat-menu #menu="matMenu">
-      <div *ngIf="isLoggedIn()"></div>
+      <div *ngIf="isLoggedIn()"><app-profile></app-profile></div>
       <button
         (click)="logoutClick()"
         mat-icon-button
